background image was overlapping the menu bar, preventing clicks

--- a/frontend/src/RightSideBar/RightSideBar.css
+++ b/frontend/src/RightSideBar/RightSideBar.css
@@ -11,7 +11,6 @@
    max-width: 300px;
 
    color: var(--panel-fg);
-   z-index: 1;
 }
 
 #rsidebar h3 {
